--- a/frontend/login-admin.html
+++ b/frontend/login-admin.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
 
@@ -17,10 +18,10 @@
         <h2>🛠 Đăng nhập Quản trị</h2>
         <p>Chỉ dành cho quản trị viên hệ thống</p>
 
-        <form onsubmit="loginAdmin(event)">
+        <form id="adminLoginForm">
             <div class="input-group">
-                <i class="fa fa-user-shield"></i>
-                <input type="text" id="adminUser" placeholder="Tên đăng nhập" required>
+                <i class="fa fa-envelope"></i>
+                <input type="email" id="adminUser" placeholder="Email" required>
             </div>
 
             <div class="input-group">
@@ -28,7 +29,9 @@
                 <input type="password" id="adminPass" placeholder="Mật khẩu" required>
             </div>
 
-            <button class="btn-primary w-100">
+            <div id="errorMessage" class="alert alert-danger mt-3" style="display: none;"></div>
+
+            <button type="submit" class="btn-primary w-100">
                 Đăng nhập Admin
             </button>
         </form>
