--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -115,6 +115,15 @@
             </div>
         </div>
 
+        <!-- QUẢN LÝ THANH TOÁN -->
+        <div class="col-md-4">
+            <div class="admin-menu" onclick="location='admin-thanh-toan.html'">
+                <i class="fa fa-credit-card"></i>
+                <h5>Quản lý thanh toán</h5>
+                <p>Xem & cập nhật trạng thái thanh toán</p>
+            </div>
+        </div>
+
     </div>
 
 </section>
