--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -97,6 +97,15 @@
             </div>
         </div>
 
+        <!-- QUẢN LÝ GIỎ HÀNG -->
+        <div class="col-md-4">
+            <div class="admin-menu" onclick="location='admin-gio-hang.html'">
+                <i class="fa fa-shopping-cart"></i>
+                <h5>Quản lý giỏ hàng</h5>
+                <p>Xem và chỉnh sửa giỏ hàng của khách hàng</p>
+            </div>
+        </div>
+
         <!-- QUẢN LÝ LIÊN HỆ -->
         <div class="col-md-4">
             <div class="admin-menu" onclick="location='admin-lien-he.html'">
