--- a/frontend/lien-he.html
+++ b/frontend/lien-he.html
@@ -20,6 +20,12 @@
             <span>BabyCutie</span>
         </div>
         
+        <!-- SEARCH -->
+        <div class="search">
+            <i class="fa fa-search" id="searchIcon" onclick="handleSearch(event)"></i>
+            <input type="text" id="searchInput" placeholder="Tìm món ăn cho bé..." onkeyup="handleSearch(event)">
+        </div>
+        
         <nav class="main-menu">
             <a href="index.html">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
