--- a/frontend/tin-tuc.html
+++ b/frontend/tin-tuc.html
@@ -116,6 +116,9 @@
     </div>
 </footer>
 
+<!-- ===== TOAST CONTAINER ===== -->
+<div id="toastContainer"></div>
+
 <!-- ===== JS RIÊNG ===== -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/tin-tuc.js"></script>
