--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -774,13 +774,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="admin-danh-muc.html" class="nav-link">
                         <i class="fas fa-layer-group"></i>
                         <span>Danh mục</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="admin-khach-hang.html" class="nav-link">
                         <i class="fas fa-users"></i>
                         <span>Khách hàng</span>
                     </a>
@@ -836,7 +836,7 @@
 
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link" onclick="logoutAdmin(); return false;">
+                    <a href="admin-cai-dat.html" class="nav-link">
                         <i class="fas fa-cog"></i>
                         <span>Cài đặt</span>
                     </a>
