--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -95,6 +95,39 @@
             border-radius: 50%;
         }
 
+        .sidebar-header .logo {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+        }
+
+        .sidebar-header .logo img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin-right: 12px;
+            object-fit: cover;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 3px solid rgba(255,255,255,0.3);
+            animation: logoGlow 3s ease-in-out infinite;
+        }
+
+        .sidebar-header .logo:hover img {
+            transform: scale(1.1) rotate(5deg);
+            box-shadow: 0 6px 20px rgba(255,255,255,0.4);
+            border-color: rgba(255,255,255,0.6);
+        }
+
+        @keyframes logoGlow {
+            0%, 100% {
+                box-shadow: 0 4px 15px rgba(0,0,0,0.2), 0 0 10px rgba(255,255,255,0.1);
+            }
+            50% {
+                box-shadow: 0 4px 20px rgba(255,255,255,0.3), 0 0 15px rgba(255,255,255,0.2);
+            }
+        }
+
         .sidebar-header .logo span {
             font-size: 22px;
             font-weight: 800;
