--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -404,24 +404,28 @@
             background: var(--gradient-modern-1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         #thongKeRow > div:nth-child(2) .admin-card p {
             background: var(--gradient-modern-5);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         #thongKeRow > div:nth-child(3) .admin-card p {
             background: var(--gradient-modern-2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         #thongKeRow > div:nth-child(4) .admin-card p {
             background: var(--gradient-modern-3);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         /* Doanh thu tháng và tổng doanh thu */
@@ -429,30 +433,35 @@
             background: var(--gradient-modern-1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(1) .admin-card p {
             background: var(--gradient-modern-2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(2) .admin-card p {
             background: var(--gradient-modern-2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(3) .admin-card p {
             background: var(--gradient-modern-5);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(4) .admin-card p {
             background: var(--gradient-modern-4);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         /* ========== MENU CARDS ========== */
@@ -521,6 +530,7 @@
             background: var(--gradient-modern-1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(2) .admin-menu::after {
@@ -533,6 +543,7 @@
             background: var(--gradient-modern-5);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(3) .admin-menu::after {
@@ -545,6 +556,7 @@
             background: var(--gradient-modern-2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(4) .admin-menu::after {
@@ -557,6 +569,7 @@
             background: var(--gradient-modern-3);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(5) .admin-menu::after {
@@ -569,6 +582,7 @@
             background: var(--gradient-modern-4);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(6) .admin-menu::after {
@@ -581,6 +595,7 @@
             background: var(--gradient-modern-6);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(7) .admin-menu::after {
@@ -593,6 +608,7 @@
             background: var(--gradient-modern-5);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .row.mt-4 > div:nth-child(8) .admin-menu::after {
@@ -605,6 +621,7 @@
             background: var(--gradient-modern-1);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .admin-menu i {
