--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,11 @@
 <header class="header">
     <div class="container header-wrap">
 
+        <!-- MOBILE MENU TOGGLE -->
+        <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
+            <i class="fas fa-bars"></i>
+        </button>
+
         <!-- LOGO -->
         <div class="logo" onclick="window.location='index.html'">
             <img src="images/logo2.jpg" alt="BabyCutie">
@@ -32,7 +37,7 @@
             <input type="text" id="searchInput" placeholder="Tìm món ăn cho bé..." onkeyup="handleSearch(event)">
         </div>
 
-        <!-- MENU -->
+        <!-- DESKTOP MENU -->
         <nav class="main-menu">
             <a href="index.html" class="active">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
@@ -62,7 +67,7 @@
             <div id="loginBtn">
             <div class="dropdown">
                 <button class="btn-login dropdown-toggle" data-bs-toggle="dropdown">
-                    <i class="fa fa-user"></i> Đăng nhập
+                    <i class="fa fa-user"></i> <span class="d-none d-md-inline">Đăng nhập</span>
                 </button>
                 <ul class="dropdown-menu">
                     <li>
@@ -82,6 +87,21 @@
 
     </div>
 </header>
+
+<!-- MOBILE MENU -->
+<div class="mobile-menu" id="mobileMenu">
+    <button class="mobile-menu-close" onclick="toggleMobileMenu()">
+        <i class="fas fa-times"></i>
+    </button>
+    <nav>
+        <a href="index.html" class="active" onclick="toggleMobileMenu()">🏠 Trang chủ</a>
+        <a href="thuc-don.html" onclick="toggleMobileMenu()">🍲 Thực đơn</a>
+        <a href="tin-tuc.html" onclick="toggleMobileMenu()">📰 Tin tức</a>
+        <a href="lien-he.html" onclick="toggleMobileMenu()">📞 Liên hệ</a>
+        <a href="gio-hang.html" onclick="toggleMobileMenu()">🛒 Giỏ hàng</a>
+        <a href="login-khach.html" onclick="toggleMobileMenu()">👤 Đăng nhập</a>
+    </nav>
+</div>
 
 <!-- ================= HERO ================= -->
 <section class="hero">
@@ -664,6 +684,32 @@ function handleSearch(event) {
         }
     }
 }
+
+// Mobile Menu Toggle
+function toggleMobileMenu() {
+    const mobileMenu = document.getElementById('mobileMenu');
+    if (mobileMenu) {
+        mobileMenu.classList.toggle('active');
+        // Prevent body scroll when menu is open
+        if (mobileMenu.classList.contains('active')) {
+            document.body.style.overflow = 'hidden';
+        } else {
+            document.body.style.overflow = '';
+        }
+    }
+}
+
+// Close mobile menu when clicking outside
+document.addEventListener('click', function(event) {
+    const mobileMenu = document.getElementById('mobileMenu');
+    const menuToggle = document.querySelector('.mobile-menu-toggle');
+    
+    if (mobileMenu && !mobileMenu.contains(event.target) && 
+        menuToggle && !menuToggle.contains(event.target) &&
+        mobileMenu.classList.contains('active')) {
+        toggleMobileMenu();
+    }
+});
 
 // Thêm event listener cho search icon
 document.addEventListener('DOMContentLoaded', () => {
