--- a/frontend/lien-he.html
+++ b/frontend/lien-he.html
@@ -35,6 +35,7 @@
         <nav class="main-menu">
             <a href="index.html">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
+            <a href="khuyen-mai.html">Khuyến mãi</a>
             <a href="tin-tuc.html">Tin tức</a>
             <a href="lien-he.html" class="active">Liên hệ</a>
         </nav>
