--- a/frontend/tin-tuc.html
+++ b/frontend/tin-tuc.html
@@ -29,6 +29,7 @@
         <nav class="main-menu">
             <a href="index.html">Trang chủ</a>
             <a href="thuc-don.html">Thực đơn</a>
+            <a href="khuyen-mai.html">Khuyến mãi</a>
             <a href="tin-tuc.html" class="active">Tin tức</a>
             <a href="lien-he.html">Liên hệ</a>
         </nav>
